// ============================================================================
// online-device-inventory — Skema Database (SQLite)
// Format: DBML (dbdiagram.io / dbml.org). Render di https://dbdiagram.io
// ----------------------------------------------------------------------------
// Prinsip:
//  - LAPTOP adalah entitas utama, dikunci oleh Serial Number (paling andal).
//  - KARYAWAN adalah entitas kedua (employees). Tiap SUBMISSION = ikatan
//    1 karyawan + 1 device pada satu waktu — menjejak resign/handover,
//    ganti laptop, dan ganti jabatan.
//  - PEMEGANG (nama/jabatan/kelompok) tetap menempel ke SUBMISSION (snapshot),
//    employees menyimpan cache identitas terkini + status active/resigned.
//  - Setiap pengisian form = 1 baris submissions (riwayat). Dashboard
//    menampilkan submission TERBARU per device dan per karyawan.
//  - Spesifikasi & skor disimpan per-submission (snapshot waktu itu),
//    karena spek bisa berubah (mis. upgrade RAM) dan skor mengikutinya.
// ============================================================================

Enum work_group {
  field           [note: 'Lapangan & Mobilitas']
  admin           [note: 'Administrasi & Operasional']
  finance         [note: 'Finance / Accounting']
  data_processing [note: 'Analis / pengguna Excel berat / data']
  management      [note: 'Manager / GM']
  it              [note: 'IT & Development']
  marketing       [note: 'Marketing / Sales']
  design          [note: 'Design / Kreatif']
  hr              [note: 'HR / GA']
  other           [note: 'Lainnya — diisi bebas oleh user di work_group_other']
}

Enum laptop_status {
  office_inventory
  personal
}

Enum physical_condition {
  good
  fair
  poor
}

Enum kelayakan_status {
  eligible [note: 'Skor tinggi, sesuai beban kerja']
  upgrade  [note: 'Masih dipakai tapi perlu tambah RAM / ganti SSD / dll']
  replace  [note: 'Sudah tidak layak untuk perannya']
}

Enum os_family {
  windows
  macos
  linux
}

Enum employee_status {
  active   [note: 'Masih bekerja / aktif memegang laptop']
  resigned [note: 'Sudah resign — dipertahankan untuk riwayat handover']
}

Enum submission_source {
  windows_script
  mac_script
  linux_script
  manual          [note: 'Diketik manual (spek tidak terdeteksi / HP-tablet)']
}

// ----------------------------------------------------------------------------
// DEVICES — satu baris per laptop fisik. Identitas hardware yang stabil.
// ----------------------------------------------------------------------------
Table devices {
  id              integer      [pk, increment]
  serial_number   varchar      [unique, note: 'Kunci utama identitas laptop. NULL jika OEM kosong/tak terbaca']
  asset_no        varchar      [note: 'No. Asset IT (label manusia, bisa kosong/belum distiker)']
  primary_mac     varchar      [note: 'MAC address — identitas cadangan bila serial kosong']
  brand           varchar
  model           varchar
  os_family       os_family
  first_seen_at   timestamp    [note: 'Pertama kali terdata']
  last_seen_at    timestamp    [note: 'Submission terakhir (cache untuk sortir dashboard)']
  admin_notes     text         [note: 'Catatan internal tim IT (mis. sudah dijadwalkan ganti)']

  Note: 'Pencocokan device saat submission masuk: cari by serial_number; bila kosong fallback ke asset_no lalu primary_mac; bila tak ketemu, buat device baru.'
}

// ----------------------------------------------------------------------------
// EMPLOYEES — satu baris per KARYAWAN. Submission mengikat karyawan + device.
// Identitas dicocokkan via (name_key, company); jabatan/kelompok di-cache dari
// submission TERBARU agar dashboard "Per Karyawan" cepat.
// ----------------------------------------------------------------------------
Table employees {
  id                  integer          [pk, increment]
  full_name           varchar          [not null]
  name_key            varchar          [note: 'Normalisasi pencocokan: lower, spasi tunggal, trim']
  employee_code       varchar          [note: 'Opsional (NIK), bisa kosong']
  company             varchar
  current_position    varchar          [note: 'Cache jabatan dari submission TERBARU']
  current_work_group  varchar          [note: 'Cache kelompok dari submission TERBARU']
  status              employee_status  [note: "default 'active'"]
  notes               text             [note: 'Catatan admin']
  first_seen_at       timestamp
  last_seen_at        timestamp

  indexes {
    (name_key, company) [name: 'idx_employees_key', note: 'Lookup pencocokan karyawan saat submit + backfill']
  }

  Note: 'Pencocokan karyawan saat submit: name_key + company (IFNULL setara). Bila ada -> segarkan cache + last_seen_at + status=active. Bila tidak -> buat baru.'
}

// ----------------------------------------------------------------------------
// SUBMISSIONS — riwayat. Tiap pengisian form jadi 1 baris.
// Berisi: pemegang saat itu + kondisi + SNAPSHOT spek + SNAPSHOT skor.
// ----------------------------------------------------------------------------
Table submissions {
  id                integer            [pk, increment]
  device_id         integer            [ref: > devices.id, not null]
  employee_id       integer            [ref: > employees.id, note: 'Ikatan ke karyawan (di-resolve via name_key + company saat submit; backfill untuk data lama)']
  submitted_at      timestamp          [not null]
  source            submission_source

  // — Pemegang (menempel ke submission, BUKAN ke device) —
  holder_name       varchar            [not null]
  holder_position   varchar            [note: 'Teks bebas jabatan']
  holder_company    varchar
  holder_location   varchar            [note: 'Kota / cabang']
  work_group        work_group         [not null, note: 'Dipilih user via dropdown; admin bisa koreksi']
  work_group_other  varchar            [note: 'Teks bebas bila work_group = other']
  laptop_status     laptop_status

  // — Identitas aset (disalin ke device saat pencocokan) —
  hostname          varchar
  mac_address       varchar
  serial_number     varchar
  asset_no          varchar

  // — Spesifikasi: CPU —
  cpu_model         varchar
  cpu_cores         integer
  cpu_threads       integer
  cpu_arch          varchar
  cpu_speed_mhz     integer
  cpu_passmark      integer            [note: 'Skor PassMark hasil lookup cpu_benchmarks (cache)']
  cpu_usage_pct     real               [note: 'SNAPSHOT beban CPU saat script jalan (rata-rata ~3s)']

  // — Spesifikasi: GPU —
  gpu               text               [note: 'Bisa lebih dari satu, dipisah koma']

  // — Spesifikasi: Motherboard —
  motherboard       text               [note: 'Vendor + produk motherboard (mis. "ASUS PRIME B450M")']

  // — Spesifikasi: RAM —
  ram_gb            real
  ram_type          varchar            [note: 'DDR4/DDR5/LPDDR5 — bila terdeteksi']
  ram_speed_mhz     integer
  ram_usage_pct     real               [note: 'SNAPSHOT beban saat script jalan']
  ram_usage_gb      real               [note: 'SNAPSHOT beban saat script jalan']
  ram_slots_total   integer            [note: 'Jumlah slot RAM fisik pada board']
  ram_slots_used    integer            [note: 'Slot terisi (untuk hitung headroom upgrade)']
  ram_max_gb        real               [note: 'Kapasitas RAM maksimum board (GB)']

  // — Spesifikasi: Storage —
  ssd_gb            real
  ssd_type          varchar            [note: 'NVMe / SATA / M.2']
  hdd_gb            real
  disk_raw          text               [note: 'JSON daftar disk fisik mentah (untuk audit)']
  os_total_gb       real
  os_free_gb        real
  disk_health_pct   real               [note: 'Kesehatan disk sistem 0-100 (100 - Wear; atau map HealthStatus)']
  disk_health_raw   text               [note: 'Teks mentah, mis. "Healthy" / "Wear 4%"']

  // — Spesifikasi: Baterai —
  battery_pct        real
  battery_wh_full    real              [note: 'Kapasitas penuh saat ini']
  battery_wh_design  real              [note: 'Kapasitas desain pabrik']
  battery_health_pct real              [note: 'Dihitung: wh_full / wh_design * 100']

  // — Spesifikasi: OS —
  os_name           varchar

  // — Keamanan & kesiapan Windows 11 (indikasi; khusus Windows) —
  tpm_version       varchar            [note: 'mis. "2.0", "1.2", "Tidak ada"']
  secure_boot       integer            [note: '1=aktif/kapabel, 0=tidak, NULL=tak terdeteksi']
  win11_ready       integer            [note: '1=siap (indikasi), 0=tidak, NULL=tak terdeteksi/non-Windows']
  win11_blockers    text               [note: 'Alasan tidak siap, mis. "TPM bukan 2.0; Secure Boot mati"']

  // — Kondisi & kelengkapan (isian manusia) —
  physical_condition physical_condition
  accessories       text               [note: 'CSV: Charger (Ori), Tas, Mouse, ... atau "Tidak ada"']
  purchase_year     integer            [note: 'Tahun pembelian']
  issues            text               [note: 'Keluhan/kerusakan, "Tidak ada" bila normal']

  // — Hasil penilaian kelayakan (snapshot, lihat docs/scoring.md) —
  score_spec        integer            [note: '0-100 kualitas hardware vs peran']
  score_load        integer            [note: '0-100 ketahanan terhadap beban kerja']
  score_total       integer            [note: '0-100 skor headline']
  status            kelayakan_status
  status_reasons    text               [note: 'JSON daftar alasan (mis. ["RAM 8GB kurang untuk Keuangan","Ganti ke SSD"])']
  eol_year          integer            [note: 'Estimasi tahun pensiun']

  indexes {
    (device_id, submitted_at) [note: 'Ambil submission terbaru per device']
  }

  Note: 'Dashboard "kondisi terbaru" = submission dengan submitted_at terbesar per device_id. Per karyawan: terbesar per employee_id (latest_per_employee).'
}

// ----------------------------------------------------------------------------
// CPU_BENCHMARKS — tabel referensi OFFLINE (di-seed sekali).
// "AnTuTu untuk laptop": petakan model CPU -> skor PassMark.
// Sumber seed: https://www.cpubenchmark.net (verifikasi angka saat mengisi).
// ----------------------------------------------------------------------------
Table cpu_benchmarks {
  id              integer  [pk, increment]
  cpu_key         varchar  [unique, note: 'Model dinormalisasi lowercase tanpa spasi ganda, mis. "amd ryzen 5 7530u"']
  cpu_label       varchar  [note: 'Nama tampilan asli']
  passmark_multi  integer  [note: 'Skor PassMark multi-thread (CPU Mark)']
  passmark_single integer  [note: 'Single-thread (opsional)']
  cores           integer
  release_year    integer
  source          varchar  [note: 'Asal data + tanggal ambil']

  Note: 'Pencocokan CPU terdeteksi -> cpu_key via normalisasi + fuzzy. Bila tak ketemu, scoring pakai fallback (lihat scoring.md).'
}

// ----------------------------------------------------------------------------
// WORK_GROUPS — kelompok kerja + profil kebutuhan & bobot (DATA-DRIVEN).
// Dulu di-hardcode di scoring.py (PROFILES/WEIGHTS) dan dikunci CHECK pada
// submissions.work_group. Kini disimpan di DB agar admin bisa menambah kelompok
// & mengkalibrasi angka lewat UI (/admin/skoring) TANPA ubah kode. Seed awal =
// nilai lama (lihat scoring_config.py). CHECK pada submissions.work_group DILEPAS
// (validasi pindah ke lapisan app).
// ----------------------------------------------------------------------------
Table work_groups {
  key         varchar [pk, note: 'mis. field/admin/finance/marketing/design/hr/other']
  label       varchar [not null, note: 'Nama tampilan (UI)']
  cpu_floor   integer [not null, note: 'PassMark multi-thread minimum']
  cpu_ideal   integer [not null, note: 'PassMark multi-thread ideal']
  ram_min     integer [not null]
  ram_ideal   integer [not null]
  w_cpu       real    [not null, note: 'Bobot komponen CPU pada Skor Spek']
  w_ram       real    [not null]
  w_storage   real    [not null]
  w_battery   real    [not null]
  sort_order  integer [note: 'Urutan tampil di dropdown']
  is_active   integer [note: '1=tampil di form publik, 0=disembunyikan']
  is_builtin  integer [note: '1=bawaan (kelompok asli), 0=tambahan admin']
}

// ----------------------------------------------------------------------------
// SCORING_SETTINGS — ambang global skoring (key/value), editable admin.
//   status_eligible_min, status_upgrade_min  (ambang status, scoring.md §4a)
//   base_lifespan_years                       (EOL, §5)
//   blend_spec, blend_load                    (bobot Skor Total = 0.7/0.3, §0)
// ----------------------------------------------------------------------------
Table scoring_settings {
  key   varchar [pk]
  value real    [not null]
}

// Catatan: AUTENTIKASI ADMIN tidak pakai tabel — cukup 1 password bersama
// dari environment variable (ADMIN_PASSWORD) + Flask session. Lihat architecture.md.
// AMBANG/THRESHOLD & profil kelompok kini DISIMPAN di DB (work_groups +
// scoring_settings), di-seed dari nilai default di scoring_config.py, dan
// didokumentasikan di scoring.md. Admin mengubahnya lewat /admin/skoring.
